simple/back/bacque-gw.yaml
# this gw/virtualsvc may not be necessary
# craque will only throw 400 errors if bacque is *not* served through the mesh
# this also means that traffic headed to bacque won't show up in the prometheus viz?
# maybe?
# ???
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bacque-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bacque
spec:
  hosts:
  - "*"
  gateways:
  - bacque-gw
  http:
  - match:
    - uri:
        exact: /fetch
    route:
    - destination:
        host: bacque
        port:
          number: 9999
